feat: Create .deb package