@@ -9,6 +9,8 @@ plugins {
     // For create fatjar with ":shadowJar"
     id("com.github.johnrengelman.shadow") version "7.1.0"
     id("org.jlleitschuh.gradle.ktlint") version "9.4.1"
+
+    id("org.beryx.runtime") version "1.12.7"
 }
 
 group = "com.kesin11"
@@ -61,6 +63,82 @@ tasks.shadowJar {
     }
     minimize()
 }
+
+runtime {
+    // jpackage default jlink optimization options
+    options.set(listOf("--strip-native-commands", "--strip-debug", "--no-header-files", "--no-man-pages"))
+    // jpackage default jlink --add-modules options
+    modules.set(listOf(
+        "java.base",
+        "java.compiler",
+        "java.datatransfer",
+        "java.desktop",
+        "java.instrument",
+        "java.logging",
+        "java.management",
+        "java.management.rmi",
+        "java.naming",
+        "java.net.http",
+        "java.prefs",
+        "java.rmi",
+        "java.scripting",
+        "java.security.jgss",
+        "java.security.sasl",
+        "java.smartcardio",
+        "java.sql",
+        "java.sql.rowset",
+        "java.transaction.xa",
+        "java.xml",
+        "java.xml.crypto",
+        "jdk.accessibility",
+        "jdk.attach",
+        "jdk.charsets",
+        "jdk.compiler",
+        "jdk.crypto.cryptoki",
+        "jdk.crypto.ec",
+        "jdk.dynalink",
+        "jdk.editpad",
+        "jdk.httpserver",
+        "jdk.incubator.foreign",
+        "jdk.incubator.vector",
+        "jdk.internal.ed",
+        "jdk.internal.jvmstat",
+        "jdk.internal.le",
+        "jdk.internal.opt",
+        "jdk.jartool",
+        "jdk.javadoc",
+        "jdk.jconsole",
+        "jdk.jdeps",
+        "jdk.jdi",
+        "jdk.jdwp.agent",
+        "jdk.jfr",
+        "jdk.jlink",
+        "jdk.jpackage",
+        "jdk.jshell",
+        "jdk.jsobject",
+        "jdk.jstatd",
+        "jdk.localedata",
+        "jdk.management",
+        "jdk.management.agent",
+        "jdk.management.jfr",
+        "jdk.naming.dns",
+        "jdk.naming.rmi",
+        "jdk.net",
+        "jdk.nio.mapmode",
+        "jdk.sctp",
+        "jdk.security.auth",
+        "jdk.security.jgss",
+        "jdk.unsupported",
+        "jdk.unsupported.desktop",
+        "jdk.xml.dom",
+        "jdk.zipfs",
+    ))
+    jpackage {
+        installerType = "deb"
+        installerOptions = listOf("--install-dir", "/usr/local")
+    }
+}
+
 val copyAndRenameJarTask = tasks.register<Copy>("copyAndRenameJar") {
     group = ARCHIVE_GROUP
     description = "Copy and rename shadow jar to skw.jar"
